# utilitaires

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/: actions.yml
.github/workflows/: main.yml
tests/: test_utilitaires.py
utilitaires/: __init__.py  conf.py  pk.py  utils.py
